--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@microsoft/signalr": "^8.0.7",
     "@ngx-gallery/core": "^5.0.0-beta.0",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
