git commit stable

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "TokenKey": "super secret unguessable key that should be at least 32 characters long",
+  "CloudinarySettings": {
+    "CloudName": "your_cloud_name",
+    "ApiKey": "your_api_key",
+    "ApiSecret": "your_api_secret"
   }
 }
